tests/ui/const-generics/mgca/double-inline-const.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/double-inline-const.rs:7:35
   |
LL |     fn foo(_: S<{ const { const { Self::Q } } }>) {}
   |                                   ^^^^
   |
note: not a concrete type
  --> $DIR/double-inline-const.rs:5:22
   |
LL | impl<const N: usize> S<N> {
   |                      ^^^^
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

